fixed left side bar z-index

--- a/Resources/public/css/L.Control.Sidebar.css
+++ b/Resources/public/css/L.Control.Sidebar.css
@@ -113,6 +113,7 @@
 
     .leaflet-sidebar.left.visible {
         left: 0;
+        
         background-color: rgba(255, 255, 255, 0.80);
     }
 
@@ -128,6 +129,7 @@
 
     .leaflet-sidebar.left.visible ~ .leaflet-left {
         left: 100%;
+         z-index: inherit;
     }
 
     .leaflet-sidebar.right.visible ~ .leaflet-right {
@@ -148,6 +150,7 @@
     }
     .leaflet-sidebar.left.visible ~ .leaflet-left {
         left: 280px;
+         z-index: inherit;
     }
     .leaflet-sidebar.right.visible ~ .leaflet-right {
         right: 240px;
@@ -164,6 +167,7 @@
 
     .leaflet-sidebar.left.visible ~ .leaflet-left {
         left: 300px;
+         z-index: inherit;
     }
 
     .leaflet-sidebar.right.visible ~ .leaflet-right {
@@ -181,6 +185,7 @@
     }
     .leaflet-sidebar.left.visible ~ .leaflet-left {
         left: 350px;
+        z-index: inherit;
 
     }
     .leaflet-sidebar.right.visible ~ .leaflet-right {
